<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<RelativeLayout
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_color"
    >

    <TextView
        android:id="@+id/txt_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/scdream3"
        android:text="@string/location_id1"
        android:textAppearance="@style/location_id1" />

    <TextView
        android:id="@+id/txt_location2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_location"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/scdream3"
        android:lineSpacingExtra="5sp"
        android:text="@string/location_id2"
        android:textAppearance="@style/location_id2" />

    <ImageView
        android:id="@+id/img_weather"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/txt_location2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/sun" />

    <TextView
        android:id="@+id/txt_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_weather"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/scdream3"
        android:text="@string/weather_id1"
        android:textAppearance="@style/weather_id1" />

    <TextView
        android:id="@+id/txt_weather2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_weather"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/scdream3"
        android:text="@string/weather_id2"
        android:textAppearance="@style/weather_id2" />

    <TextView
        android:id="@+id/txt_weather3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_weather2"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/scdream3"
        android:text="@string/weather_id3"
        android:textAppearance="@style/weather_id3" />

    <ImageView
        android:id="@+id/img_dust"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@id/txt_weather3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/dust7" />

    <TextView
        android:id="@+id/txt_dust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_dust"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/scdream3"
        android:text="@string/dust_id1"
        android:textAppearance="@style/dust_id1" />

    <TextView
        android:id="@+id/txt_covid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_dust"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/scdream3"
        android:text="@string/covid_id1"
        android:textAppearance="@style/covid_id1" />

    <TextView
        android:id="@+id/txt_covid2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_covid"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/scdream3"
        android:text="@string/covid_id2"
        android:textAppearance="@style/covid_id2" />

    <TextView
        android:id="@+id/txt_covid3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_covid2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/scdream3"
        android:text="@string/covid_id3"
        android:textAppearance="@style/covid_id3" />

    <TextView
        android:id="@+id/txt_covid4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_covid3"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/scdream3"
        android:text="@string/covid_id4"
        android:textAppearance="@style/covid_id4" />

</RelativeLayout>

</ScrollView>