<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/some_id"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_color"
    >
    <TextView
        android:layout_width="93dp"
        android:layout_height="33dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/location_id1"
        android:textAppearance="@style/location_id1"
        android:lineSpacingExtra="5sp"
        android:translationY="-2.34sp"
        android:gravity="center_horizontal|top"
        android:fontFamily="@font/scdream3"
        />
    <TextView
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:text="@string/location_id2"
        android:textAppearance="@style/location_id2"
        android:lineSpacingExtra="5sp"
        android:translationY="-2.34sp"
        android:gravity="center_horizontal|top"
        android:fontFamily="@font/scdream3"
        />

    <!-- w_big_img -->
    <View
        android:id="@+id/w_big_img"
        android:layout_width="147dp"
        android:layout_height="147dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="106dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="122dp"
        android:background="@drawable/w_big_img"
        />

    <!-- w_big_text -->
    <View
        android:id="@+id/w_big_text"
        android:layout_width="151dp"
        android:layout_height="86dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="102dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="286dp"
        android:background="#00000000"
        />

    <!-- w_big_txt -->
    <TextView
        android:id="@+id/w_big_txt"
        android:layout_width="151dp"
        android:layout_height="86dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="102dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="286dp"
        android:text="@string/w_big_txt"
        android:textAppearance="@style/w_big_txt"
        android:lineSpacingExtra="7sp"
        android:translationY="-3.51sp"
        android:gravity="center_horizontal|top"
        />

    <!-- weather_time -->
    <View
        android:id="@+id/weather_tim"
        android:layout_width="353dp"
        android:layout_height="113dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="3dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="406dp"
        android:background="#00000000"
        />

    <!-- w_time -->
    <View
        android:id="@+id/w_time"
        android:layout_width="56dp"
        android:layout_height="98dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="414dp"
        android:background="#00000000"
        />

    <!-- w_t_d_txt -->
    <TextView
        android:id="@+id/w_t_d_txt"
        android:layout_width="31dp"
        android:layout_height="34dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="28dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="478dp"
        android:text="@string/w_t_d_txt"
        android:textAppearance="@style/w_t_d_txt"
        android:gravity="center_horizontal|top"
        />

    <!-- w_t_s_img -->
    <View
        android:id="@+id/w_t_s_img"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="414dp"
        android:background="@drawable/w_t_s_img"
        />

    <!-- weather_back -->
    <View
        android:id="@+id/weather_bac"
        android:layout_width="353dp"
        android:layout_height="113dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="3dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="406dp"
        android:background="@drawable/weather_bac"
        android:elevation="3dp"
        />

    <!-- week_one -->
    <View
        android:id="@+id/week_one"
        android:layout_width="300dp"
        android:layout_height="33.43dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="23dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="568dp"
        android:background="#00000000"
        />

    <!-- week_s_img -->
    <View
        android:id="@+id/week_s_img"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="97dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="568dp"
        android:background="@drawable/week_s_img"
        />

    <!-- week_s_topdown -->
    <TextView
        android:id="@+id/week_s_topd"
        android:layout_width="61dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="262dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="576dp"
        android:text="@string/week_s_topdown"
        android:textAppearance="@style/week_s_topdown"
        android:gravity="center_horizontal|top"
        />

    <!-- week_s_date -->
    <TextView
        android:id="@+id/week_s_date"
        android:layout_width="48dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="23dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="576dp"
        android:text="@string/week_s_date"
        android:textAppearance="@style/week_s_date"
        android:gravity="center_horizontal|top"
        />

    <!-- week_s_face -->
    <View
        android:id="@+id/week_s_face"
        android:layout_width="33dp"
        android:layout_height="33.43dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="176dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="568dp"
        android:background="#00000000"
        />

    <!-- week_face_img -->
    <View
        android:id="@+id/week_face_i"
        android:layout_width="33dp"
        android:layout_height="33.43dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="176dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="568dp"
        android:background="@drawable/week_face_img"
        />

    <!-- week_face_back -->
    <View
        android:id="@+id/week_face_b"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="176dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="568dp"
        android:background="@drawable/week_face_back"
        />

    <!-- week_top_txt -->
    <View
        android:id="@+id/week_top_tx"
        android:layout_width="293dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="34dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="537dp"
        android:background="#00000000"
        />

    <!-- w_topdown -->
    <TextView
        android:id="@+id/w_topdown"
        android:layout_width="68dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="259dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="537dp"
        android:text="@string/w_topdown"
        android:textAppearance="@style/w_topdown"
        android:gravity="center_horizontal|top"
        />

    <!-- w_dust -->
    <TextView
        android:id="@+id/w_dust"
        android:layout_width="54dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="166dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="537dp"
        android:text="@string/w_dust"
        android:textAppearance="@style/w_dust"
        android:gravity="center_horizontal|top"
        />

    <!-- w_weather -->
    <TextView
        android:id="@+id/w_weather"
        android:layout_width="27dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="537dp"
        android:text="@string/w_weather"
        android:textAppearance="@style/w_weather"
        android:gravity="center_horizontal|top"
        />

    <!-- w_date -->
    <TextView
        android:id="@+id/w_date"
        android:layout_width="27dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="34dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="537dp"
        android:text="@string/w_date"
        android:textAppearance="@style/w_date"
        android:gravity="center_horizontal|top"
        />

</RelativeLayout>
